kubernetes/monitoring/grafana/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/external: "true"
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: kube-system
  hostnames:
    - grafana.eviljungle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-internal
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
  hostnames:
    - grafana.eviljungle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
